# FashionCrawler

./: .gitignore  .pylintrc  README.md  TODO.md  create-task-old.py  create-task.py  data_extraction.py  grailed_scraper.py  io_utils.py  logger.py  logger_config.py  main.py  pyproject.toml  requirements-dup.txt  requirements.txt  scraper.py  scraping.py
config/: config.yaml
dev/scripts/: sync_requirements.py
fashioncrawler/: __init__.py
fashioncrawler/extractor/: __init__.py  base_data_extractor.py  depop_data_extractor.py  grailed_data_extractor.py
fashioncrawler/resources/config/: config.yaml
fashioncrawler/resources/templates/: base_template.html.j2  base_template.jinja2  depop_subtemplate.html.j2  grailed_subtemplate.html.j2  style.css
fashioncrawler/scraper/: __init__.py  base_scraper.py  depop_scraper.py  grailed_scraper.py  stockx_scraper.py
fashioncrawler/utils/: __init__.py  html_renderer.py  io_utils.py  logger_config.py  utils.py
test/: hello_kitty.json  test.py
testing/: nike_dunks.json
