[tool.poetry]
name = "FashionCrawler"
version = "0.2.0"
description = "FashionCrawler is a versatile Python tool designed for scraping data from various online shopping platforms including Grailed, Depop, and more."
authors = ["Nick <normalcitizen24@proton.me> <nbgenius1@gmail.com>"]
readme = "README.md"
package-mode = false
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11.8"
attrs = "^23.2.0"
beautifulsoup4 = "^4.12.3"
bs4 = "^0.0.2"
certifi = "^2024.2.2"
charset-normalizer = "^3.3.2"
h11 = "^0.14.0"
idna = "^3.6"
lxml = "^5.1.0"
numpy = "^1.26.4"
outcome = "^1.3.0.post0"
packaging = "^23.2"
pandas = "^2.2.1"
pysocks = "^1.7.1"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
pyyaml = "^6.0.1"
requests = "^2.31.0"
selenium = "^4.18.1"
six = "^1.16.0"
sniffio = "^1.3.1"
sortedcontainers = "^2.4.0"
soupsieve = "^2.5"
trio = "^0.24.0"
trio-websocket = "^0.11.1"
typing-extensions = "^4.10.0"
tzdata = "^2024.1"
urllib3 = "^2.2.1"
webdriver-manager = "^4.0.1"
wsproto = "^1.2.0"
jinja2 = "^3.1.3"
weasyprint = "^61.2"

[tool.poetry.group.dev.dependencies]
tomlkit = "^0.12.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
